sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var a:Int=0;
  var v:Int = o;
  for (i<- 1 to getNombreValeurs -1) {
    v=getValeur(i);
    a=i-1;
    var j:Int =i-1
    do {
      if (!plusPetitQue(a,v)){&
        copie(a,a+1);
        a=a-1;
      }
      i=i-1 ;
     }
    while (a==i && i>0)
    }
    setValeur(a,v)
  }
